<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:src="@drawable/login_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        />

    <ImageView
        android:id="@+id/iv_zhihuNewspaper"
        android:src="@drawable/splash_logo"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

    <Button
        android:id="@+id/btn_byUsername"
        android:background="@drawable/button_circle_shape"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintVertical_bias="0.24"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_byXinlang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_user"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/byUsername"
        android:textSize="22sp"
    />

    <Button
        android:id="@+id/btn_byXinlang"
        android:background="@drawable/button_circle_shape"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/account_sina"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/byXinlang"
        android:textSize="22sp"
        />

    <Button
        android:id="@+id/btn_byTencent"
        android:background="@drawable/button_circle_shape"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintVertical_bias="0.76"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_byXinlang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/account_tencent"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/byTencent"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/tv_register"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintTop_toBottomOf="@+id/btn_byTencent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="22sp"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/colorWhite"
        android:background="@color/colorToolbar"
        app:title="@string/login"
        app:titleMarginStart="30dp"
        android:minHeight="?attr/actionBarSize"
        >
    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>