<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/iv_background"
        android:src="@drawable/bg_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        />

    <EditText
        android:id="@+id/et_username"
        android:background="@drawable/edittext_circle_namepassword"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:lines="1"
        android:textSize="25sp"
        android:maxLength="25"
        />

    <EditText
        android:id="@+id/et_password"
        android:background="@drawable/edittext_circle_namepassword"
        app:layout_constraintVertical_bias="0.37"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:lines="1"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:maxLength="25"
        />

    <Button
        android:id="@+id/btn_register"
        android:background="@drawable/button_circle_registerlogin"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/register"
        android:textColor="@color/colorRegisterLoginButton"
        android:textSize="22sp"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/colorToolbarText1"
        app:title="@string/register"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back_register"
        />
</androidx.constraintlayout.widget.ConstraintLayout>